fixed h1 clipping

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -67,3 +67,7 @@ img {
   font-style: italic;
   word-wrap: break-word;
 }
+
+h1 {
+  margin-left: 50px;
+}
